--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-:root {
-  height: 100%;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -74,53 +68,63 @@ body,
   }
 }
 
+html,
+body,
+:root {
+  @apply h-full;
+}
+
 .ql-toolbar {
-  border: none !important;
-  background-color: #f8f8f8 !important;
+border: none !important;
+background-color: #f8f8f8 !important;
 }
 
 .ql-toolbar .ql-formats:not(:last-child) {
-  border-right: 1px solid #dcdcdc !important;
-  padding-right: 12px !important;
+border-right: 1px solid #dcdcdc !important;
+padding-right: 12px !important;
 }
 
 .ql-container {
-  font-family: "Lato", sans-serif !important;
-  border: none !important;
-  height: unset !important;
+font-family: 'Lato', sans-serif !important;
+border: none !important;
+height: unset !important;
 }
 
 .ql-editor {
-  line-height: 22px !important;
-  padding: 8px 12px !important;
-  color: #1d1c1d !important;
-  font-weight: 400 !important;
-  font-size: 14px !important;
-  font-family: "Lato", sans-serif !important;
+line-height: 22px !important;
+padding: 8px 12px !important;
+color: #1d1c1d !important;
+font-weight: 400 !important;
+font-family: 'Lato', sans-serif !important;
+font-size: 14px !important;
 }
 
 .ql-editor a {
-  color: #1264a3 !important;
+color: #1264a3 !important;
 }
 
 .ql-editor a:hover {
-  text-decoration: underline !important;
-}
-
-.ql-renderer {
-  padding: 0 !important;
-}
-
-.ql-editor:focus{
-  background-color: #fff !important;
+text-decoration: underline !important;
 }
 
 .ql-editor:before {
-  left: 12px !important;
-  color: #8d8d8d !important;
-  font-family: "Lato", sans-serif !important;
-  font-style: normal !important;
-  font-size: 14px !important;
-  font-weight: 400 !important;
-  @apply truncate;
+left: 12px !important;
+font-family: 'Lato', sans-serif !important;
+color: #8d8d8d !important;
+font-style: normal !important;
+font-size: 14px !important;
+font-weight: 400 !important;
+
+@apply !truncate;
+}
+
+.ql-renderer {
+@apply !p-0;
+}
+
+@layer utilities {
+.messages-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #dcdcdc #f8f8f8;
+}
 }
